# talon-sdk

./: .gitignore  LICENSE  Makefile  README.md  cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  go.mod  talon.go  talon_geo.go  talon_graph.go  talon_ts.go
.github/workflows/: update-libs.yml
dotnet/: README.md
dotnet/Talon/: NativeLib.cs  Talon.csproj  TalonClient.cs
go/: cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_arm64.go  cgo_linux_loongarch64.go  cgo_linux_riscv64.go  cgo_windows_amd64.go  go.mod  talon.go  talon_ai.go  talon_fts.go  talon_geo.go  talon_graph.go  talon_mq.go  talon_ts.go
go/scripts/: setup.sh
java/: README.md  pom.xml
java/src/main/java/io/talon/: NativeLib.java  Talon.java  TalonException.java
lib/darwin_amd64/: talon.h
lib/linux_loongarch64/: talon.h
lib/windows_amd64/: talon.h
nodejs/: README.md  index.d.ts  index.js  package.json
nodejs/scripts/: postinstall.js
python/: README.md  pyproject.toml
python/talon/: __init__.py  _ai_mixin.py  _native.py  client.py
python/tests/: test_sdk.py
