[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "talon-db"
version = "0.1.0"
description = "Talon — 面向本地 AI 的多模融合数据引擎 Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["database", "embedded", "ai", "vector", "timeseries"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[project.urls]
Repository = "https://github.com/talon-db/talon"
