#
# Copyright (c) 2026 Talon Contributors
# Author: dark.lijin@gmail.com
# Licensed under the Talon Community Dual License Agreement.
# See the LICENSE file in the project root for full license information.
#
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "talon-db"
version = "0.1.0"
description = "Talon — AI-native multi-model data engine (SQL + KV + Vector + TimeSeries + MQ + FTS + GEO + Graph + AI)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["database", "embedded", "ai", "vector", "timeseries", "kv", "rag", "agent"]
authors = [{name = "Talon Contributors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/darkmice/talon-core"
Repository = "https://github.com/darkmice/talon-sdk"
Documentation = "https://darkmice.github.io/talon-docs/"

[tool.setuptools.packages.find]
include = ["talon*"]
